--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -43,12 +43,13 @@
       <hr>
       <footer>
         <p><small>
-          <a href="http://creativecommons.org/publicdomain/zero/1.0/"><img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0"/></a> &nbsp;
-          By <a href="http://kbroman.github.io">Karl Broman</a>,
+          <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> &nbsp;
+          By <a href="http://nickreich.github.io">Nicholas Reich</a>,
           rendered with <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/"
         target="_blank">Twitter Bootstrap</a>, hosted by <a
-        href="http://github.com" target="_blank">github</a>
+        href="http://github.com" target="_blank">github</a>,
+        web design adapted from <a href="http://kbroman.github.io">Karl Broman</a>
         </small></p>
       </footer>
 
